--- a/css/styles.css
+++ b/css/styles.css
@@ -1028,3 +1028,27 @@ a, button {
     color:#fff;
   }
 }
+
+
+#scrollTopBtn{
+  position:fixed;
+  right:18px;
+  bottom:-60px; /* skrytý pod spodkem */
+  background-color:#111;
+  color:var(--brand);
+  border:none;
+  border-radius:50px;
+  width:52px;
+  height:52px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:20px;
+  cursor:pointer;
+  z-index:999;
+  transition:bottom .35s cubic-bezier(.4,0,.2,1);
+}
+
+#scrollTopBtn.is-visible{
+  bottom:18px; /* vyjede nahoru */
+}
